--- a/client/src/Components/Footer/Footer.css
+++ b/client/src/Components/Footer/Footer.css
@@ -3,7 +3,7 @@
    background-color: #38485a; 
    color: white;
    padding-bottom: 30px;
-   padding-top: 20px;
+   padding-top: 50px;
    display: flex;
    justify-content: space-evenly;   
 }
@@ -20,13 +20,14 @@
 .footer_info  {
     font-weight: bold;
     font-family: "Lato", sans-serif;
-    font-size: 25px;
+    font-size: 18px;
     border-image: solid white;
 }
 .footer_infoText{
     font-size: 12px;
     padding-top: 5px;
-    
+    color: rgba(213, 213, 213, 0.6);
+    line-height: 20px;
 }
 a {
     color: white;
