--- a/client/src/Pages/Answer/Answer.css
+++ b/client/src/Pages/Answer/Answer.css
@@ -4,8 +4,19 @@
     padding-top: 80px;
     margin-bottom: 100px;
 }
-h1,h2{
+.answer_container h1,h2{
     font-weight: 500;
+}
+.answer_question{
+    font-weight: 500;
+    font-size: 18px;
+    padding-bottom: 5px;
+}
+.answer_question_desc{
+    font-size: 16px;
+    font-weight: 400;
+    color: #656565;
+    padding-bottom: 15px;
 }
 .answer{
     display: flex;
@@ -22,8 +33,8 @@ h1,h2{
     width: 90%;
     display: flex;
     justify-content: space-between;
-    padding: 50px 10px;
-    font-size: 20px;
+    padding: 30px 10px;
+    font-size: 17px;
 }
 
 .answer_form_title {
@@ -40,7 +51,7 @@ h1,h2{
 }
 
 .answer_form_container  {
-    margin-top: 25px;
+    margin-top: 50px;
     padding: 30px 60px 30px 30px;
     height: auto;
     box-shadow: 1px 15px 25px 1px #d5d5d5;
